--- a/index.html
+++ b/index.html
@@ -6,6 +6,58 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="wrapper">
+    	<aside>
+    		<section id="create-drawing">
+    		    <h1>创建</h1>
+    		    <article>
+	    			<button id="rect">Rect</button>
+	    			<button id="circle">Circle</button>
+	    			<button id="ellipse">Ellipse</button>
+	    			<button id="line">Line</button>
+    			</article>
+    		</section>
+            <section id="drawing">
+            	<h1>形状</h1>
+            	<article></article>
+            </section>
+            <section id="exterior-transform">
+            	<h1>外观和变换</h1>
+            	<article>
+            	    <div>
+            	    	<label for="filling">填充</span>
+            	    	<input type="color" name="filling">
+            	    </div>
+            		<div>
+            			<label for="stroke">描边</label>
+            			<input type="color" name="stroke">
+            			<input type="range" name="stroke-width">
+            		</div>
+            		<div>
+            			<label for="translate-x">translateX</label>
+            			<input type="range" name="translate-x">
+            		</div>
+            		<div>
+            			<label for="translate-y">translateY</label>
+            			<input type="range" name="translate-y">
+            		</div>
+            		<div>
+            			<label for="rotate">rotate</label>
+            			<input type="range" name="rotate">
+            		</div>
+            		<div>
+            			<label for="scale">scale</label>
+            			<input type="range" name="scale">
+            		</div>
+            	</article>
+            </section>
+    	</aside>
+    	<main>
+    		<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+    			<rect />
+    		</svg>
+    	</main>
+    </div>
 	
 
 <script src="jquery-3.1.0.min.js"></script>
