--- a/index.html
+++ b/index.html
@@ -19,43 +19,25 @@
     		</section>
             <section id="drawing">
             	<h1>形状</h1>
-            	<article></article>
+            	<article>请先创建图形</article>
             </section>
-            <section id="exterior-transform">
-            	<h1>外观和变换</h1>
+            <section id="exterior">
+            	<h1>外观</h1>
             	<article>
-            	    <div>
-            	    	<label for="filling">填充</span>
-            	    	<input type="color" name="filling">
-            	    </div>
-            		<div>
+            	    <p>
+            	    	<label for="fill">填充</span>
+            	    	<input type="color" name="fill" value="#ffffff" id="fill">
+            	    </p>
+            		<p>
             			<label for="stroke">描边</label>
-            			<input type="color" name="stroke">
-            			<input type="range" name="stroke-width">
-            		</div>
-            		<div>
-            			<label for="translate-x">translateX</label>
-            			<input type="range" name="translate-x">
-            		</div>
-            		<div>
-            			<label for="translate-y">translateY</label>
-            			<input type="range" name="translate-y">
-            		</div>
-            		<div>
-            			<label for="rotate">rotate</label>
-            			<input type="range" name="rotate">
-            		</div>
-            		<div>
-            			<label for="scale">scale</label>
-            			<input type="range" name="scale">
-            		</div>
+            			<input type="color" name="stroke" value="#ff0000" id="stroke">
+            			<input type="range" name="stroke-width" value="1" id="strokeWidth" min="1" max="10">
+            		</p>
             	</article>
             </section>
     	</aside>
     	<main>
-    		<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-    			<rect />
-    		</svg>
+    	    <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" id="svg"></svg>   		
     	</main>
     </div>
 	
